fixed responsiveness on mobile screen sizes

--- a/styles/guest-create-estimate.css
+++ b/styles/guest-create-estimate.css
@@ -537,34 +537,17 @@ button {
 }
 
 /*Media query for iPad*/
-@media (max-width: 768px){
+@media (max-width: 414px){
              
     .l-proj {
-        font-size: 1rem;
+        font-size: 14px;
         margin-top: 2px;
     }
     .text-center h1 {
-        margin-left: +80px !important;
+        margin-left: +30px !important;
     }
     .card  {
         margin-left: -3px;
     }
-    h5 {
-        font-size: 2.05rem;
-    }
-    .l-proj {
-        font-size: 2rem;
-    }
-    .project {
-        margin-top: 1vh;
-        height: 70px;
-        padding: 10px;
-        width: 100%;
-    }
-    p{
-        font-size:20px;
-    margin-top: 0;
-    margin-bottom: 3rem;
-}
     
 }
